FISH-11726: enabled ClientValidationTest